--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,59 @@
-bcrypt==3.1.4
+backports.entry-points-selectable==1.1.0
+bcrypt==3.2.0
 blinker==1.4
-certifi==2016.2.28
-cffi==1.11.5
-click==6.7
-Flask==1.0
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.2
+ChatterBot==1.0.4
+chatterbot-corpus==1.2.0
+click==8.0.1
+colorama==0.4.4
+distlib==0.3.2
+dnspython==2.1.0
+email-validator==1.1.3
+filelock==3.0.12
+Flask==2.0.1
 Flask-Bcrypt==0.7.1
-Flask-Login==0.4.1
+Flask-Login==0.5.0
 Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-Pillow==5.3.0
-pycparser==2.18
-six==1.11.0
-SQLAlchemy==1.2.7
-Werkzeug==0.14.1
-WTForms==2.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+future==0.18.2
+greenlet==1.1.0
+gunicorn==20.1.0
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+joblib==1.0.1
+jsondatabase==0.1.7
+MarkupSafe==2.0.1
+mathparse==0.1.2
+nltk==3.6.2
+numpy==1.21.0
+oauthlib==3.1.1
+packaging==21.0
+pandas==1.3.0
+Pint==0.17
+platformdirs==2.0.2
+pycparser==2.20
+pymongo==3.12.0
+pyparsing==2.4.7
+python-dateutil==2.7.5
+python-twitter==3.5
+pytz==2021.1
+PyYAML==3.13
+regex==2021.7.6
+requests==2.26.0
+requests-oauthlib==1.3.0
+scikit-learn==0.24.2
+scipy==1.7.0
+six==1.16.0
+SQLAlchemy==1.4.20
+threadpoolctl==2.2.0
+tqdm==4.61.2
+urllib3==1.26.6
+virtualenv==20.6.0
+Werkzeug==2.0.1
+whitenoise==5.2.0
+WTForms==2.3.3
+
